<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_coupons"
        android:icon="@drawable/coupon"
        android:title="@string/coupons" />

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_menu_favouritelist"
        android:title="@string/menu_favourite" />

    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/action_call"
                android:icon="@drawable/ic_call"
                android:title="@string/call" />


            <item
                android:id="@+id/action_messenger"
                android:icon="@drawable/ic_messenger"
                android:title="@string/messenger" />

            <item
                android:id="@+id/action_direction"
                android:icon="@drawable/map_marker"
                android:title="@string/get_directions" />

        </menu>
    </item>



</menu>
